2009-06-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, man/sfcbd.1.pre.in:
	[ 2766344 ] Allow the client trust store to be a directory
	(patch from Mihai Ibanescu)
	
2009-04-06 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, wbemcat, wbemcat.1.pre.in
	[ 2794013 ] Multiple wbemcats

2009-04-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* classProvider.c, classProviderGz.c:
	[ 2727841 ] Memory Leak is in gatherNameSpaces in classProvider
	Redo fix for failure on certain distros.

2009-05-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/xmltest.sh
	Support for prereq checks and cleaned output

2009-05-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, internalProvider.c, internalProvider.h: 
	[ 2779966 ] Use upcalls for ei/ein in indCIMXMLHandler	

2009-05-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimXmlParser.c
	[ 2784240 ] Possible array access overflow in cimXmlParser
	(patch from Klaus Kämpf)

2009-05-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* classProvider.c, providerDrv.c, test/xmltest/CreateClassSegfault*:
	[ 2778276 ] ClassProvider exiting by CreateClass
	(based on patch from Shigeyoshi Hashi)

2009-05-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/xmltest.sh:
	Added support for inverse xmltests in .lines files.

2009-04-27 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* classProvider.c, classProviderGz.c, classProviderMem.c
	  test/xmltest/EnumerateClassesNoName.*:
	[ 2780126 ] EnumerateClassNames with ClassName=NULL gets error
	(based on patch from Shigeyoshi Hashi)

2009-04-23 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimXmlGen.c
	[ 2779859 ] HOST defaults to "localhost" in XML output of OBJECTPATH

2009-04-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2771516 ] Duplicate extern in indCIMXMLHandler.c

	* objectImpl.c: