@@ -1,3 +1,9 @@
+2009-06-05  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* interopServerProvider.c:
+	[ 2761168 ] Return value does not comply DSP0200
+	(patch from Shigeyoshi Hashi)
+	
 2009-06-04  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* httpAdapter.c, man/sfcbd.1.pre.in:
